--- a/Task 01/calculator.ipynb
+++ b/Task 01/calculator.ipynb
@@ -71,16 +71,11 @@
     "\n",
     "\n",
     "\n",
-    "calculator(1+2*3*4-5/4-3/5)\n"
+    "calculator(1+2*3*4-5/4-3/5)\n",
+    "\n",
+    "#copyright @ Hamza Akmal all rights reserved.\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9343457c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
