--- a/Task 05/Task  05.ipynb
+++ b/Task 05/Task  05.ipynb
@@ -27,7 +27,8 @@
     }
    ],
    "source": [
-    "tree_structure = {\n",
+    "# Tree represented as adjacency list\n",
+    "tree_map = {\n",
     "    'A': ['B', 'C'],\n",
     "    'B': ['D', 'E'],\n",
     "    'C': ['F'],\n",
@@ -37,27 +38,30 @@
     "    'G': []\n",
     "}\n",
     "\n",
-    "def dfs_stack(start, goal):\n",
-    "    visit = []\n",
-    "    stack = [start]\n",
+    "def depth_first_stack(source, target):\n",
+    "    explored = []\n",
+    "    stack_list = [source]\n",
     "\n",
-    "    while stack:\n",
-    "        current = stack.pop()\n",
-    "        if current not in visit:\n",
-    "            visit.append(current)\n",
-    "            print(\"Visiting:\", current)\n",
-    "            if current == goal:\n",
-    "                print(\"Goal:\", goal, \"found!\")\n",
-    "                return visit\n",
-    "            for child in reversed(tree_structure[current]):\n",
-    "                if child not in visit:\n",
-    "                    stack.append(child)\n",
+    "    while stack_list:\n",
+    "        node = stack_list.pop()\n",
+    "        if node not in explored:\n",
+    "            explored.append(node)\n",
+    "            print(\"Currently Checking:\", node)\n",
+    "            if node == target:\n",
+    "                print(f\"Target '{target}' Located Successfully!\")\n",
+    "                return explored\n",
     "\n",
-    "    print(\"Goal:\", goal, \"not found.\")\n",
-    "    return visit\n",
+    "            for neighbor in reversed(tree_map[node]):\n",
+    "                if neighbor not in explored:\n",
+    "                    stack_list.append(neighbor)\n",
     "\n",
-    "visited_nodes = dfs_stack('A', 'D')\n",
-    "print(\"DFS Traverse:\", visited_nodes)\n"
+    "    print(f\"Target '{target}' Not Found in Tree.\")\n",
+    "    return explored\n",
+    "\n",
+    "\n",
+    "# Run DFS search\n",
+    "result_path = depth_first_stack('A', 'D')\n",
+    "print(\"DFS Path Traversed:\", result_path)\n"
    ]
   },
   {
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "53a53b6e",
    "metadata": {},
    "outputs": [
@@ -88,51 +92,54 @@
     }
    ],
    "source": [
-    "class Node:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "        self.children = []\n",
+    "class TreeNode:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.descendants = []\n",
     "\n",
-    "    def add_child(self, child):\n",
-    "        self.children.append(child)\n",
+    "    def connect(self, node):\n",
+    "        self.descendants.append(node)\n",
     "\n",
     "\n",
-    "def stack(start, goal):\n",
-    "    visited = []\n",
-    "    stack = [start]\n",
+    "def depth_first_search(start_node, target):\n",
+    "    explored = []\n",
+    "    stack_list = [start_node]\n",
     "\n",
-    "    while stack:\n",
-    "        current = stack.pop()   \n",
-    "        if current not in visited:\n",
-    "            visited.append(current)\n",
-    "            print(\"Visiting....:\", current.value)\n",
-    "            if current.value == goal:\n",
-    "                print(\"Goal:\", goal, \"found!\")\n",
-    "                return visited\n",
-    "            for child in reversed(current.children):\n",
-    "                if child not in visited:\n",
-    "                    stack.append(child)\n",
+    "    while stack_list:\n",
+    "        current_node = stack_list.pop()\n",
+    "        if current_node not in explored:\n",
+    "            explored.append(current_node)\n",
+    "            print(\"Currently Exploring:\", current_node.data)\n",
+    "            if current_node.data == target:\n",
+    "                print(f\"Target Node '{target}' Reached!\")\n",
+    "                return explored\n",
+    "            for next_node in reversed(current_node.descendants):\n",
+    "                if next_node not in explored:\n",
+    "                    stack_list.append(next_node)\n",
     "\n",
-    "    print(\"Goal:\", goal, \"not found.\")\n",
+    "    print(f\"Target Node '{target}' Not Found in Tree.\")\n",
     "\n",
-    "a = Node('A')\n",
-    "b = Node('B')\n",
-    "c = Node('C')\n",
-    "d = Node('D')\n",
-    "e = Node('E')\n",
-    "f = Node('F')\n",
-    "g = Node('G')\n",
     "\n",
-    "a.add_child(b)\n",
-    "a.add_child(c)\n",
-    "b.add_child(d)\n",
-    "b.add_child(e)\n",
-    "c.add_child(f)\n",
-    "f.add_child(g)\n",
+    "# Building the Tree\n",
+    "A = TreeNode('A')\n",
+    "B = TreeNode('B')\n",
+    "C = TreeNode('C')\n",
+    "D = TreeNode('D')\n",
+    "E = TreeNode('E')\n",
+    "F = TreeNode('F')\n",
+    "G = TreeNode('G')\n",
     "\n",
-    "visited_nodes = stack(a, 'E')\n",
-    "x = [node.value for node in visited_nodes]\n",
-    "print(\"DFS Stack:\", x)\n"
+    "A.connect(B)\n",
+    "A.connect(C)\n",
+    "B.connect(D)\n",
+    "B.connect(E)\n",
+    "C.connect(F)\n",
+    "F.connect(G)\n",
+    "\n",
+    "# Running DFS\n",
+    "visited_nodes = depth_first_search(A, 'E')\n",
+    "path = [node.data for node in visited_nodes]\n",
+    "print(\"DFS Traversal Path:\", path)\n"
    ]
   },
   {
