--- a/Task 06/Task 06.ipynb
+++ b/Task 06/Task 06.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e3bc2874",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,8 @@
     }
    ],
    "source": [
-    "graph = {\n",
+    "# Graph representation as adjacency list\n",
+    "network = {\n",
     "    'D': ['E', 'F'],\n",
     "    'E': ['A', 'C'],\n",
     "    'F': ['G'],\n",
@@ -32,20 +33,25 @@
     "    'G': []\n",
     "}\n",
     "\n",
-    "def bfs(graph, start):\n",
-    "    visited = []\n",
-    "    nodes = [start]\n",
+    "def breadth_first_traversal(graph_data, start_node):\n",
+    "    explored = []\n",
+    "    queue = [start_node]\n",
     "\n",
-    "    while nodes:\n",
-    "        n = nodes[0]\n",
-    "        print(n)\n",
-    "        visited.append(n)\n",
-    "        for neighbor in graph[n]:\n",
-    "            if neighbor not in visited and neighbor not in nodes:\n",
-    "                nodes.append(neighbor)\n",
-    "        nodes = nodes[1:]\n",
+    "    while queue:\n",
+    "        current = queue.pop(0)\n",
+    "        print(\"Visiting Node:\", current)\n",
+    "        explored.append(current)\n",
     "\n",
-    "bfs(graph, 'A')"
+    "        for adjacent in graph_data[current]:\n",
+    "            if adjacent not in explored and adjacent not in queue:\n",
+    "                queue.append(adjacent)\n",
+    "\n",
+    "    return explored\n",
+    "\n",
+    "\n",
+    "# Running BFS\n",
+    "visited_order = breadth_first_traversal(network, 'A')\n",
+    "print(\"BFS Traversal Sequence:\", visited_order)\n"
    ]
   },
   {
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f903151b",
    "metadata": {},
    "outputs": [
@@ -75,44 +81,50 @@
     }
    ],
    "source": [
-    "class Node:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "        self.visited = False\n",
-    "        self.neighbors = []\n",
+    "class GraphNode:\n",
+    "    def __init__(self, label):\n",
+    "        self.label = label\n",
+    "        self.is_visited = False\n",
+    "        self.connections = []\n",
     "\n",
-    "def bfs(start_node):\n",
-    "    queue = []\n",
-    "    start_node.visited = True\n",
-    "    queue.append(start_node)\n",
+    "def breadth_first_search(entry_point):\n",
+    "    queue_list = []\n",
+    "    entry_point.is_visited = True\n",
+    "    queue_list.append(entry_point)\n",
     "\n",
-    "    while queue:\n",
-    "        current_node = queue.pop(0)\n",
-    "        print(current_node.value)\n",
-    "        for i in current_node.neighbors:\n",
-    "            if not i.visited:\n",
-    "                i.visited = True\n",
-    "                queue.append(i)\n",
+    "    while queue_list:\n",
+    "        active_node = queue_list.pop(0)\n",
+    "        print(\"Currently Visiting:\", active_node.label)\n",
+    "        for adjacent in active_node.connections:\n",
+    "            if not adjacent.is_visited:\n",
+    "                adjacent.is_visited = True\n",
+    "                queue_list.append(adjacent)\n",
     "\n",
-    "def reset_visited(nodes):\n",
-    "    for node in nodes:\n",
-    "        node.visited = False\n",
+    "def clear_visited_flags(node_list):\n",
+    "    for n in node_list:\n",
+    "        n.is_visited = False\n",
     "\n",
-    "root = Node('J')\n",
-    "b = Node('E')\n",
-    "c = Node('F')\n",
-    "d = Node('A')\n",
-    "e = Node('C')\n",
-    "f = Node('G')\n",
     "\n",
-    "root.neighbors = [b, e]\n",
-    "b.neighbors = [d, e]\n",
-    "c.neighbors = [f]\n",
-    "all_nodes = [root, b, c, d, e, f]\n",
-    "print(\"BFS traversal output:\")\n",
-    "bfs(root)\n",
+    "# Building graph structure\n",
+    "J = GraphNode('J')\n",
+    "E = GraphNode('E')\n",
+    "F = GraphNode('F')\n",
+    "A = GraphNode('A')\n",
+    "C = GraphNode('C')\n",
+    "G = GraphNode('G')\n",
     "\n",
-    "reset_visited(all_nodes)"
+    "J.connections = [E, C]\n",
+    "E.connections = [A, C]\n",
+    "F.connections = [G]\n",
+    "\n",
+    "# Collecting nodes\n",
+    "all_nodes = [J, E, F, A, C, G]\n",
+    "\n",
+    "print(\"Breadth-First Search Result:\\n\")\n",
+    "breadth_first_search(J)\n",
+    "\n",
+    "# Reset visit status for potential reuse\n",
+    "clear_visited_flags(all_nodes)\n"
    ]
   }
  ],
