Update: Complete AI Lab Semester 3rd Task Uploaded

--- a/Task 05/Task  05.ipynb
+++ b/Task 05/Task  05.ipynb
@@ -46,7 +46,7 @@
     "        node = stack_list.pop()\n",
     "        if node not in explored:\n",
     "            explored.append(node)\n",
-    "            print(\"Currently Checking:\", node)\n",
+    "            print(\"Currently Checkng:\", node)\n",
     "            if node == target:\n",
     "                print(f\"Target '{target}' Located Successfully!\")\n",
     "                return explored\n",
